# shimmyjinja

./: .gitignore  Cargo.toml  README.md  README_ZH.md  ROADMAP.md  SHIMMYJINJA_DESIGN.md
.github/workflows/: ci.yml
src/: ast.rs  eval.rs  lexer.rs  lib.rs  parser.rs
tests/: edge_cases.rs  gguf_extraction.rs  property_tests.proptest-regressions  property_tests.rs  real_model_templates.rs  templates.rs  tinyllama_case.rs
